apps/base/wg-easy/wg-easy.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-easy
  namespace: wg-easy-system
spec:
  replicas: 0
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: wg-easy
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{"name":"wg-easy-lan","interface":"net1"}]'
      labels:
        app.kubernetes.io/name: wg-easy
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: wg-easy
          image: ghcr.io/wg-easy/wg-easy:15.4.0@sha256:0e7bc9d34e86ddcaa92bc700d4d7dc9b33291dbc07ac8d13382f7c2095f949ec
          imagePullPolicy: IfNotPresent
          ports:
            - name: wireguard
              containerPort: 51820
              protocol: UDP
            - name: http
              containerPort: 51821
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 60
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "2"
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /etc/wireguard
            - name: modules
              mountPath: /lib/modules
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: wg-easy-data
        - name: modules
          hostPath:
            path: /lib/modules
            type: Directory
