apps/base/wg-easy/wg-easy.services.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-web
  namespace: wg-easy-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wg-easy
  ports:
    - name: http
      port: 51821
      protocol: TCP
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-vpn
  namespace: wg-easy-system
  labels:
    networking.tinyrack.net/load-balancer: cilium-l2
  annotations:
    lbipam.cilium.io/ips: "10.132.246.4"
    metallb.io/loadBalancerIPs: "10.132.246.4"
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  externalTrafficPolicy: Cluster
  selector:
    app.kubernetes.io/name: wg-easy
  ports:
    - name: wireguard
      port: 51820
      protocol: UDP
      targetPort: wireguard
