apps/base/wg-easy/wg-easy.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wg-easy
  namespace: wg-easy-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vpn.intranet.winetree94.com`)
      kind: Rule
      services:
        - name: wg-easy-web
          port: 51821
  tls:
    secretName: letsencrypt-cert
