apps/base/wg-easy/wg-easy.network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wg-easy-ingress
  namespace: wg-easy-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: wg-easy
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-system
      ports:
        - port: 51821
          protocol: TCP
    - ports:
        - port: 51820
          protocol: UDP
